pushing to work on home pc

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,39 +9,35 @@ body {
   background-color: #f0f0f0;
 }
 #title {
-  padding-left: 1rem;
-  background-color: #321224;
+  background-color: var(--headerBackground);
   color: white;
+  padding: 0.2rem 1rem;
+  
 }
 #navigation {
-  width: 100%;
   display: flex;
-  margin-top: 0.5rem;
-  background-color: #9a001d;
-  p {
+  padding: 0.2rem 1rem;
+  background-color: var(--navBackgroundColor);
+  position: sticky;
+  top: 0;
+  ul li {
     margin-right: 1rem;
-    a {
+    float: right;
+    padding: 0.5rem 1rem;
+    list-style: none;
+    button {
+      background-color: #9a001d;
+      border: none;
       color: white;
-      a:visited {
-        color: white;
-      }
+      font-size: 1rem;
+    }
+    button:hover {
+      text-decoration: underline;
     }
   }
 }
-@media (max-width: 420px) {
-  #navSection {
-    background-color: #9a001d;
-    #navigation {
-      display: block;
-      a {
-        color: white;
-        a:visited {
-          color: white;
-        }
-      }
-    }
-  }
-}
+
+
 .movie_card{
   display: flex;
   justify-content: center;
@@ -53,8 +49,7 @@ body {
     width: 20%;
     height: 80%;
     margin-left: 1rem;
+    float: left;
   }
-  p{
-    
-  }
+  
 }
